--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "test"
+      - run: ls
       - name: diff
         uses: youyo/aws-cdk-github-actions@v2
         with:
