--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: Deploy
 run-name: Peanut Gallery CDK Deploy
-on: [push]
+on:
+  push:
+    branches:
+      main
 jobs:
   deploy:
     runs-on: ubuntu-latest
