--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   "scripts": {
     "build": "tsc",
     "cdk": "cdk",
+    "synth": "npm run cdk -- synth",
     "test": "jest",
     "watch": "tsc -w"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.11.16",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
     "aws-cdk": "2.127.0",
+    "jest": "^29.7.0",
+    "prettier": "3.2.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
