enable deployment on all branches and add ui s3 bucket

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,6 @@
 name: Deploy
 run-name: Peanut Gallery CDK Deploy
-on:
-  push:
-    branches: main
+on: [push]
 jobs:
   deploy:
     runs-on: ubuntu-latest
