--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - run: pwd
+      - run: ls
       - name: authenticate with aws
         uses: aws-actions/configure-aws-credentials@v3
         with:
