--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v3
       - run: pwd
       - run: ls
+      - run: ls lib
       - name: authenticate with aws
         uses: aws-actions/configure-aws-credentials@v3
         with:
